# evilbc

./: .gitignore  CMakeLists.txt  README.md  base.cc  base.h  build.sh  read.cc  recv.cc  select.cc  sleep.cc  version_script  waitpid.cc
.github/workflows/: build.yml
